# TeapotLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  TeapotLib.slnx  TeapotLib.vcxproj  TeapotLib.vcxproj.filters  TeapotLibConfig.cmake.in  version.cmake.in
TeapotLib/x64/Debug/TeapotLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  TeapotLib.lastbuildstate
examples/: SIMPLE_BUTTON_EXAMPLE.md  button_example.cpp  simple_button_example.cpp
include/Teapot/: button.hpp  cap.hpp  commandpool.hpp  descriptors.hpp  device.hpp  essentials.hpp  framebuffer.hpp  image.hpp  input.hpp  instance.hpp  pipeline.hpp  projection.hpp  queue.hpp  rendering.hpp  renderpass.hpp  shader.hpp  structures.hpp  swapchain.hpp  teapot.hpp  ui_renderer.hpp  version.hpp  vertex.hpp  window.hpp
include/Teapot/common/: cap.hpp  one_func_test.hpp  structures.hpp
include/Teapot/core/: device.hpp  dispatch.hpp  image.hpp  instance.hpp  queue.hpp  swapchain.hpp
include/Teapot/pipeline/: commandpool.hpp  descriptors.hpp  framebuffer.hpp  pipeline.hpp  renderpass.hpp  shader.hpp
include/Teapot/platform/: input.hpp  window.hpp
include/Teapot/ui/: button.hpp  projection.hpp  ui_renderer.hpp  vertex.hpp
shaders/: ui_button.frag  ui_button.vert  ui_button.vert.spv
src/: button.cpp  commandpool.cpp  descriptors.cpp  device.cpp  framebuffer.cpp  image.cpp  input.cpp  instance.cpp  pipeline.cpp  queue.cpp  rendering.cpp  renderpass.cpp  shader.cpp  structures.cpp  swapchain.cpp  ui_renderer.cpp  window.cpp
src/core/: device.cpp  dispatch.cpp  image.cpp  instance.cpp  queue.cpp  swapchain.cpp
src/pipeline/: commandpool.cpp  descriptors.cpp  framebuffer.cpp  pipeline.cpp  renderpass.cpp  shader.cpp
src/platform/: input.cpp  window.cpp
src/ui/: button.cpp  ui_renderer.cpp
tests/: CMakeLists.txt  device_test.cpp
x64/Debug/: TeapotLib.idb
